--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,23 +11,32 @@ on:
 
 jobs:
   build:
-
-    
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: Step 1 - Checkout github repository
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+          
+      - name: Build with Maven project - so jar is created
+        run: mvn -B package --file pom.xml
+        
+      - name: List out what's in current directory.
+        run: ls -la
+        
+      - name: What's in target folder?
+        run:
+          cd target
+          ls -la
 
 #publish:
   #needs: build
