--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: ls -la
         
       - name: What's in target folder?
-        run:
+        run: |
           cd target
           ls -la
 
