--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,17 +20,17 @@ jobs:
       - name: Step 1 - Checkout github repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Step 2- Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
           
-      - name: Build with Maven project - so jar is created
+      - name: Step 3 - Build with Maven project - so jar is created
         run: mvn -B package --file pom.xml
         
-      - name: List out what's in current directory.
+      - name: Step 4 - List out what's in current directory.
         run: |
          if [ "$RUNNER_OS" == "Linux" ]; then
               ls -la
@@ -44,7 +44,7 @@ jobs:
          fi
         shell: bash
         
-      - name: What's in target folder?
+      - name: Step 5 - What's in target folder?
         run: |
          if [ "$RUNNER_OS" == "Linux" ]; then
               cd target
