revert some changes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,11 +71,8 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/cheers2019:latest
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/cheers2019:latest,mode=max
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/cheers2019:latest
 
 
 #publish:
