--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest] ## , macOS-latest] <== This mofo doesn't have docker =.=
 
     steps:
       - name: Step 1 - Checkout github repository
@@ -61,12 +61,12 @@ jobs:
          fi
         shell: bash
 
-      - name: Login to Docker Hub
+      - name: Step 6 - Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      - name: Build and push
+      - name: Step 7 - Build and push
         uses: docker/build-push-action@v3
         with:
           context: ./
